--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,13 @@
 Fble:
-* [lang] Flesh out spec for new fble.
- - Describe types of types and kinds much better.
-
-* [perf] Avoid high cost of copying captured contexts
-  - but how?
+* [test] Rename tests to match new spec, and clean up tests.
+* [perf] Only copy those variables needed for a function context.
 
 Fble Cleanup:
+* Update abstract syntax and parser to match spec.
+  - in terms of names of things and order of things.
+* Fix handling of type vs. normal name.
+* Rename FbleNamespaceExpr FbleStructEval, and typedef FbleStructImport to
+  match.
 * Test namespace eval with mixed type and normal fields.
 * Better error messages on types that have the same name but different values.
 * Figure out how to make a version of 7.4-06-* for values.
