--- a/TODO.txt
+++ b/TODO.txt
@@ -2,12 +2,16 @@ Fble:
 * [test] Rename tests to match new spec, and clean up tests.
 
 * [perf] Improve variable lookup and function context copy.
+  - Push scope from PUSH_SCOPE instruction.
+    func, eval, and link should push context to the data stack, then use
+    explicit PUSH_SCOPE and PUSH_VAR instructions to initialize the scope.
   - Switch from linked list to array for scope. (expect much faster)
   - Only copy those parts of the context needed for the func, etc. involved.
     (expect much faster)
   
 
 Fble Cleanup:
+* rename NAMESPACE_INSTR to STRUCT_EVAL_INSTR.
 * Update abstract syntax and parser to match spec.
   - in terms of names of things and order of things.
 * Fix handling of type vs. normal name.
