--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,9 @@ Fble Perf:
 * Clean up type Eval to avoid duplicate work.
   4 seconds of AllTests is spent here. Practically the entire time for compilation.
 
+Fble Test:
+* Test that explicit type struct values can take type args and poly args?
+
 Fble Cleanup:
 * Factor out common code for thunks used by func, link, and exec.
 * Update abstract syntax and parser to match spec.
