--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 * [test] Rename tests to match new spec, and clean up tests.
 * [test] Set up infra for testing no memory growth.
-* [prgm] Port fbld-md5.c to fble-md5.c.
 * [prgm] Implement game of life.
 
 * [perf] Think about how to reduce cost of capturing, popping scopes.
@@ -10,6 +9,7 @@
 * [clean] Factor out common code for thunks used by func, link, and exec.
 * [test] Test and fix handling of type vs. normal name.
 * [test] Think about how to support tail recursion without memory growth.
+* [clean] Make FbleValue abstract in fble.h.
 
 * Test that explicit type struct values can take type args and poly args?
 * Update abstract syntax and parser to match spec.
