--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 * [test] Rename tests to match new spec, and clean up tests.
 * [test] Fix failing tail recursion memory test.
+ - Use IPUSH / IPOP for struct eval.
+ - Store scope size as part of InstrBlock.
+ - PushScope as part of PushCode, and pop with IPOP, rather than have separate
+   instructions.
 
 * [perf] Think about how to reduce cost of capturing, popping scopes.
 * [perf] Clean up type Eval to avoid duplicate work.
