--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
 * [test] Rename tests to match new spec, and clean up tests.
 * [test] Fix failing tail recursion memory test.
- - Any way to factor out common code for tracking if EnterScope is at the end
-   of the block?
+ - Propagate 'exit' flag from compile to func_apply instruction.
+* [test] Add test for struct eval that needs to exit (should fail if we forget
+  to CompileExit generating StructEval.
+* [test] Add test for poly in a context that should not exit (should fail if
+  we assume poly always exits).
 
 * [perf] Think about how to reduce cost of capturing, popping scopes.
 * [perf] Clean up type Eval to avoid duplicate work.
