--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 * [test] Rename tests to match new spec, and clean up tests.
 * [prgm] Implement game of life.
 * [perf] Think about how to reduce cost of capturing, popping scopes.
- - Especially for multi-arg function case.
+ - Experiment with implementation support for multi-arg functions.
 
 * [clean] Factor out common code for thunks used by func, link, and exec.
 * [test] Test and fix handling of type vs. normal name.
@@ -11,6 +11,7 @@
 * [perf] Optimize FbleRefAdd
  - replace all AddToVector callbacks in ref.c if feasible.
 * Test that explicit type struct values can take type args and poly args?
+  And same for all other kinds of struct expressions.
 * Test that a struct type doesn't equal a union type, func type, etc.
 * Update abstract syntax and parser to match spec.
   - in terms of names of things and order of things.
